--- a/Aqua/Aqua.csproj
+++ b/Aqua/Aqua.csproj
@@ -36,6 +36,8 @@
     </PackageReference>
     <PackageReference Include="Mohsen.PersianDateControls" Version="1.0.1" />
     <PackageReference Include="PersianDatePicker" Version="1.1.0" />
+    <PackageReference Include="Stimulsoft.Reports.Net" Version="2023.1.1" />
+    <PackageReference Include="Stimulsoft.Reports.Wpf" Version="2023.1.1" />
   </ItemGroup>
 
   <ItemGroup>
